# masquerade-proxy

./: README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
client/: Cargo.toml
client/src/: main.rs
docs/: logo.txt  network.excalidraw  traffic-diagram.excalidraw
server/: Cargo.toml
server/src/: main.rs  structs.rs
