[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"