[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
warp = { version = "0.3", features = ["compression", "tls"] }
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json"] }
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
public-ip = "0.2.2"
clap = { version = "4.0", features = ["derive"] }
url = "2.5.4"